<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:rowCount="5"
        android:columnCount="6">

        <Button
            android:id="@+id/btnClear"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:background="@color/black"
            android:fontFamily="monospace"
            android:text="@string/clear"
            android:textColor="@color/white"
            android:textSize="25sp"
            app:backgroundTint="@android:color/holo_red_dark" />

        <Button
            android:id="@+id/btnBracket"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:background="@color/black"
            android:fontFamily="monospace"
            android:text="@string/brack"
            android:textColor="@color/white"
            android:textSize="25sp"
            app:backgroundTint="@color/black" />

        <Button
            android:id="@+id/btnPercent"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_row="0"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:background="@color/black"
            android:fontFamily="monospace"
            android:text="@string/perc"
            android:textColor="@color/white"
            android:textSize="25sp"
            app:backgroundTint="@color/black" />

        <Button
            android:id="@+id/btnDivision"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_row="0"
            android:layout_column="3"
            android:layout_columnWeight="1"
            android:background="@color/black"
            android:fontFamily="monospace"
            android:text="@string/div"
            android:textColor="@color/white"
            android:textSize="25sp"
            app:backgroundTint="@color/black" />


        <Button
            android:id="@+id/btn7"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:background="@color/black"
            android:fontFamily="sans-serif"
            android:text="@string/seven"
            android:textColor="@color/black"
            android:textSize="25sp"
            app:backgroundTint="@color/white" />

        <Button
            android:id="@+id/btn8"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:background="@color/white"
            android:fontFamily="sans-serif"
            android:text="@string/eight"
            android:textColor="@color/black"
            android:textSize="25sp"
            app:backgroundTint="@color/white" />

        <Button
            android:id="@+id/btn9"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_row="1"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:background="@color/black"
            android:fontFamily="sans-serif"
            android:text="@string/nine"
            android:textColor="@color/black"
            android:textSize="25sp"
            app:backgroundTint="@color/white" />

        <Button
            android:id="@+id/btnMultiply"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_row="1"
            android:layout_column="3"
            android:layout_columnWeight="1"
            android:background="@color/black"
            android:fontFamily="sans-serif"
            android:text="@string/multi"
            android:textColor="@color/white"
            android:textSize="25sp"
            app:backgroundTint="@color/black" />


        <Button
            android:id="@+id/btn4"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_row="2"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:background="@color/black"
            android:fontFamily="sans-serif"
            android:text="@string/four"
            android:textColor="@color/black"
            android:textSize="25sp"
            app:backgroundTint="@color/white" />

        <Button
            android:id="@+id/btn5"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_row="2"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:background="@color/black"
            android:fontFamily="sans-serif"
            android:text="@string/five"
            android:textColor="@color/black"
            android:textSize="25sp"
            app:backgroundTint="@color/white" />

        <Button
            android:id="@+id/btn6"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_row="2"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:background="@color/black"
            android:fontFamily="sans-serif"
            android:text="@string/six"
            android:textColor="@color/black"
            android:textSize="25sp"
            app:backgroundTint="@color/white" />

        <Button
            android:id="@+id/btnMinus"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_row="2"
            android:layout_column="3"
            android:layout_columnWeight="1"
            android:background="@color/black"
            android:fontFamily="sans-serif"
            android:text="@string/minus"
            android:textColor="@color/white"
            android:textSize="25sp"
            app:backgroundTint="@color/black" />


        <Button
            android:id="@+id/btn1"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_row="3"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:background="@color/black"
            android:fontFamily="sans-serif"
            android:text="@string/one"
            android:textColor="@color/black"
            android:textSize="25sp"
            app:backgroundTint="@color/white" />

        <Button
            android:id="@+id/btn2"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_row="3"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:background="@color/black"
            android:fontFamily="sans-serif"
            android:text="@string/two"
            android:textColor="@color/black"
            android:textSize="25sp"
            app:backgroundTint="@color/white" />

        <Button
            android:id="@+id/btn3"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_row="3"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:background="@color/black"
            android:fontFamily="sans-serif"
            android:text="@string/three"
            android:textColor="@color/black"
            android:textSize="25sp"
            app:backgroundTint="@color/white" />

        <Button
            android:id="@+id/btnPlus"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_row="3"
            android:layout_column="3"
            android:layout_columnWeight="1"
            android:background="@color/black"
            android:fontFamily="sans-serif"
            android:text="@string/plus"
            android:textColor="@color/white"
            android:textSize="25sp"
            app:backgroundTint="@color/black" />


        <Button
            android:id="@+id/btn0"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_row="4"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:background="@color/black"
            android:fontFamily="sans-serif"
            android:text="@string/zero"
            android:textColor="@color/black"
            android:textSize="25sp"
            app:backgroundTint="@color/white" />
        <Button
            android:id="@+id/btn12"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_row="4"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:background="@color/black"
            android:fontFamily="sans-serif"
            android:text="*"
            android:textColor="@color/black"
            android:textSize="25sp"
            app:backgroundTint="@color/white" />

        <Button
            android:id="@+id/btnDot"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_row="4"
            android:layout_column="2"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:background="@color/black"
            android:fontFamily="sans-serif"
            android:text="@string/dot"
            android:textColor="@color/black"
            android:textSize="25sp"
            app:backgroundTint="@color/white" />

        <Button
            android:id="@+id/btnEqual"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_row="4"
            android:layout_column="3"
            android:layout_columnWeight="1"
            android:background="@color/orange"
            android:fontFamily="sans-serif"
            android:text="@string/equal"
            android:textColor="@color/white"
            android:textSize="25sp"
            app:backgroundTint="@android:color/holo_orange_dark" />











    </GridLayout>

</RelativeLayout>